test/conformance/chainsaw/deleting-policies/namespaced/rbac-missing/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ndpol-rbac-missing
