test/conformance/chainsaw/deleting-policies/namespaced/rbac-missing/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespaced-deleting-policy-configmap-without-rbac
spec:
  steps:
    - name: step-00
      try:
        - apply:
            file: ns.yaml

    - name: step-01
      try:
        - apply:
            file: configmap.yaml
        - assert:
            file: configmap-assert.yaml

    - name: step-02
      try:
        - apply:
            file: policy.yaml

    - name: step-03
      try:
        - sleep:
            duration: 1m5s

    - name: step-04
      try:
        - assert:
            file: configmap-assert.yaml
